# proc.la

./: .gitmodules  CMakeLists.txt  EBNF  README.MD  SPEC  ast.c  ast.h  ast_executor.c  ast_executor.h  ast_obj.c  ast_obj.h  main.c  proc.la.l  proc.la.l.c  proc.la.y  proc.la.y.bak  proc.la.y.c  sample.c.l  sample.c.y
ast_obj/: ast_container.h  ast_ctrl.h  ast_expr.h  ast_la.c  ast_la.h  ast_node.h  ast_obj.c  ast_obj.h  ast_optimization.c  ast_runtime.c  ast_runtime.h  ast_stmt.c  ast_stmt.h  ast_type.h  ast_variable.c  ast_variable.h
autogen/: proc.la.l.c  proc.la.y.c  proc.la.y.dot  proc.la.y.output
samples/: SPEC.la  expr.la  first.la
